GET and PUBLISH from Roles, problem in page rendering when displaying the roles. Updated Manual

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Factx-Frontend
+
+# application.properties
+server.port=8081
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+
+base.url="http://localhost:8080"
