--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-base.url="http://localhost:8080"
+# Logs para WebFlux
+#logging.level.org.springframework.web.reactive.function.client=DEBUG
+#logging.level.reactor.netty.http.client=DEBUG
