--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-# Logs para WebFlux
-#logging.level.org.springframework.web.reactive.function.client=DEBUG
-#logging.level.reactor.netty.http.client=DEBUG
+# En application.properties
+logging.file.name=logs/app.log
+
+# En application.properties
+# logging.level.org.springframework.web=DEBUG
