--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 # En application.properties
-logging.file.name=logs/app.log
+# logging.file.name=logs/app.log
 
-# En application.properties
+# Ver acciones en la consola
 # logging.level.org.springframework.web=DEBUG
