--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.thymeleaf.cache=false
 # logging.file.name=logs/app.log
 
 # Ver acciones en la consola
-# logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
