Contruccion del Modelo Producto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.thymeleaf.cache=false
 
 # Ver acciones en la consola
 logging.level.org.springframework.web=DEBUG
+
+# Manejo de solicitudes multiparte
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
