--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.thymeleaf.cache=false
 # logging.file.name=logs/app.log
 
 # Ver acciones en la consola
-logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.web=DEBUG
 
 # Manejo de solicitudes multiparte
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=215MB
+# spring.servlet.multipart.enabled=true
+# spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
