CRUD Products Completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.thymeleaf.cache=false
 # logging.file.name=logs/app.log
 
 # Ver acciones en la consola
-# logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 # Manejo de solicitudes multiparte
 # spring.servlet.multipart.enabled=true
