--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.thymeleaf.cache=false
 # En application.properties
 # logging.file.name=logs/app.log
 
-# Ver acciones en la consola
+# Ver acciones en la consola9
 logging.level.org.springframework.web=DEBUG
 
 # Manejo de solicitudes multiparte
