Eliminación de los Buscadores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
+# Nombre de la aplicacionn
 spring.application.name=Factx-Frontend
 
-# application.properties
+# Configuracion del servidor
 server.port=8081
 
+# Configuracion de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-# En application.properties
+# Configuracion de logs
 # logging.file.name=logs/app.log
 
-# Ver acciones en la consola9
-logging.level.org.springframework.web=DEBUG
+# Ver acciones en la consola
+# logging.level.org.springframework.web=DEBUG
 
 # Manejo de solicitudes multiparte
 # spring.servlet.multipart.enabled=true
