--- a/pom.xml
+++ b/pom.xml
@@ -1,64 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- Versión del modelo de POM -->
     <modelVersion>4.0.0</modelVersion>
+
+    <!-- Definición del padre, Spring Boot starter parent -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>  <!-- <version>2.5.4</version>-->
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.2.5</version> <!-- Se puede cambiar a <version>2.5.4</version> si es necesario -->
+        <relativePath /> <!-- Buscar el padre desde el repositorio -->
     </parent>
+
+    <!-- Información básica del proyecto -->
     <groupId>com.levting</groupId>
     <artifactId>Factx-Frontend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Factx-Frontend</name>
     <description>Frontend of Factx</description>
+
+    <!-- Propiedades del proyecto -->
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <!-- Dependencias del proyecto -->
     <dependencies>
+        <!-- Dependencia para Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Dependencia para Spring WebFlux -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
+        <!-- Dependencia para Lombok (opcional) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
+        <!-- Dependencia para el servidor Tomcat (proporcionado) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
 
+        <!-- Dependencia para pruebas con Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- Dependencia para pruebas con Reactor -->
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- Dependencia para Thymeleaf -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
-
+    <!-- Configuración de build -->
     <build>
         <plugins>
             <plugin>
@@ -66,6 +84,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <!-- Excluir Lombok del build -->
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
@@ -74,6 +93,9 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <!-- Nombre final del artefacto generado -->
+        <finalName>Factx-Frontend</finalName>
     </build>
 
 </project>
