--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=Factx-Frontend
 
 # Configuracion del servidor
-server.port=8081
+# server.port=8081
 
 # Configuracion de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
@@ -13,10 +13,12 @@ spring.thymeleaf.cache=false
 # logging.file.name=logs/app.log
 
 # Ver acciones en la consola
-# logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 # Manejo de solicitudes multiparte
 # spring.servlet.multipart.enabled=true
 # spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.thymeleaf.ThymeleafAutoConfiguration
