Cambio en el puerto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=Factx-Frontend
 
 # Configuracion del servidor
-# server.port=8081
+server.port=8081
 
 # Configuracion de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
